<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >


    <TextView
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/india"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital"/>

        <TextView
            android:id="@+id/countryCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_delhi"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"/>

        <TextView
            android:id="@+id/countryRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asia"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_region"/>

        <TextView
            android:id="@+id/countrySubRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/east_asia"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/population"/>

        <TextView
            android:id="@+id/countryPopulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_34543634"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borders"/>

        <TextView
            android:id="@+id/countryBorders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pakistan_china_bangladesh_nepal"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languages"/>

        <TextView
            android:id="@+id/countryLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hindi_urdu_marthi_kannad_telgu"
            android:layout_marginStart="10dp"/>
    </LinearLayout>



    <ImageView
        android:id="@+id/countryFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/flag_image"
        android:scaleType="centerCrop"/>

</LinearLayout>